Removed phone number

--- a/dagtilbud/vuggestue/index.html
+++ b/dagtilbud/vuggestue/index.html
@@ -164,8 +164,7 @@
                                                 </p>
                                                 <p style="margin: 0cm 11.35pt 8pt 0cm;"> </p>
                                                 <p style="margin: 0cm 11.35pt 8pt 0cm;"><span style="color: #000000; font-family: Calibri;"><span style="line-height: 107%; font-size: 14pt;">Når dit barn er indskrevet hos os indbyder vi, hver onsdag formiddag 9.30-10.30 til legestue. Du og dit barn kan møde op 3 md. Før start i vuggestue, så dit barn får kendskab til det at gå i vuggestue. Det giver os en mulighed for at lære dit barn og dig at kende og du får mulighed for at følge vores hverdag som den er, når dit barn skal være en del af vuggestuen. Dermed har vi</span>
-                                                    <span
-                                                        style="line-height: 107%; font-size: 12pt;"> </span><span style="line-height: 107%; font-size: 14pt;">afstemt vores forventninger til hinanden inden jeres barn starter, samt et godt samarbejde er i gang.</span></span>
+                                                    <span style="line-height: 107%; font-size: 12pt;"> </span><span style="line-height: 107%; font-size: 14pt;">afstemt vores forventninger til hinanden inden jeres barn starter, samt et godt samarbejde er i gang.</span></span>
                                                 </p>
                                                 <p style="margin: 0cm 11.35pt 8pt 0cm;"><span style="color: #000000; line-height: 107%; font-family: Calibri; font-size: 14pt;"> </span></p>
                                                 <p><span style="color: #000000; line-height: 107%; font-family: Calibri; font-size: 14pt;">I Sødal Børnehus har vi en søvnpolitik. Da vi mener, søvn er en afgørende betydning i det lille barns liv. Vi har ingen faste sovetider, jeres barn sover efter behov. Det foregår i tæt dialog med jer forældre. Dette snakker vi desuden meget mere om, når I kommer i legestue. Læs desuden mere om vores søvnpolitik på vores hjemmeside soedahlbh.viborg.dk</span>                                                    <span style="color: #000000; font-family: Times New Roman; font-size: 16px;"></span></p>
@@ -209,7 +208,7 @@
                     <p align="left" style="color: black;"><strong>Henvendelser vedr. hjemmesiden: </strong></p>
                     <p align="left" style="color: black;"><i style="color: black;" class="fa fa-envelope"> </i> <strong>  Email:  </strong><a style="color: black;" href="mailto:herindom90@gmail.com">herindom90@gmail.com</a></p>
 
-                    <p align="left" style="color: black;"><i style="color: black;" class="fa fa-phone"> </i> <strong>  Mobil & sms  </strong><a style="color: black;" href="tel:+45 +26639531">26639531</a></p>
+                    <p align="left" style="color: black;"><i style="color: black;" class="fa fa-phone"> </i> <strong>  Mobil & sms  </strong><a style="color: black;" href="tel:+45 +88888888">88888888</a></p>
                 </div>
                 <div class="col-md-4 col-sm-6">
                     <h3 style="color: black;">2025 | L&#248;vel - lige i n&#230;rheden</h3>
