--- a/foreninger/loevelfonden-2000-formaal/index.html
+++ b/foreninger/loevelfonden-2000-formaal/index.html
@@ -182,7 +182,8 @@
                                                 <p>Stk. 1.           Generalforsamlingen er foreningens højeste myndighed.</p>
                                                 <p>Stk. 2.           Kommende ordinære generalforsamlinger bliver i november måned. Indsamlinger fremover inden 30. september. Ekstraordinær generalforsamling kan indkaldes af bestyrelsen efter behov, og skal
                                                     indkaldes, når mindst 1/3 af foreningens medlemmer skriftligt fremsætter krav herom med angivelse af grund. I sidstnævnte tilfælde skal generalforsamling afholdes senest 6 uger efter modtagelsen af begæringen
-                                                    herom.</p>
+                                                    herom.
+                                                </p>
                                                 <p>Stk. 3.           Den ordinære generalforsamling indkaldes med mindst 2 ugers varsel gennem dagspressen.</p>
                                                 <p> </p>
                                                 <p> </p>
@@ -297,7 +298,7 @@
                     <p align="left" style="color: black;"><strong>Henvendelser vedr. hjemmesiden: </strong></p>
                     <p align="left" style="color: black;"><i style="color: black;" class="fa fa-envelope"> </i> <strong>  Email:  </strong><a style="color: black;" href="mailto:herindom90@gmail.com">herindom90@gmail.com</a></p>
 
-                    <p align="left" style="color: black;"><i style="color: black;" class="fa fa-phone"> </i> <strong>  Mobil & sms  </strong><a style="color: black;" href="tel:+45 +26639531">26639531</a></p>
+                    <p align="left" style="color: black;"><i style="color: black;" class="fa fa-phone"> </i> <strong>  Mobil & sms  </strong><a style="color: black;" href="tel:+45 +88888888">88888888</a></p>
                 </div>
                 <div class="col-md-4 col-sm-6">
                     <h3 style="color: black;">2025 | L&#248;vel - lige i n&#230;rheden</h3>
