--- a/informationer/byens-loeve/index.html
+++ b/informationer/byens-loeve/index.html
@@ -150,7 +150,8 @@
 
                                                 <p>Årets Æresløve bliver udnævnt hvert år ved byfestens afslutning. For at blive Æresløve skal man have ydet en anerkendelsesværdig indsats for Løvel og omegn.</p>
                                                 <p>Som bevis på udnævnelsen modtager Løven en kæde, som skal bæres ved forskellige arrangementer i byen. Desuden får Æresløven 1.000 kr., som han/hun skal få størst mulig udbytte af, ved afholdelse af forskellige
-                                                    aktiviteter.</p>
+                                                    aktiviteter.
+                                                </p>
                                                 <p>Udbyttet bliver indsat på en konto og midlerne skal bruges til by-forskønnelse eller andre formål, der kommer borgerne i Løvel og omegn til gode.</p>
                                                 <p>Tilskud kan søges af alle i Løvel og omegn, såvel foreninger som enkeltpersoner.</p>
                                                 <p>Alle foreninger og indbyggere i Løvel og omegn kan skriftligt indstille kandidater til Årets Æresløve</p>
@@ -183,7 +184,7 @@
                     <p align="left" style="color: black;"><strong>Henvendelser vedr. hjemmesiden: </strong></p>
                     <p align="left" style="color: black;"><i style="color: black;" class="fa fa-envelope"> </i> <strong>  Email:  </strong><a style="color: black;" href="mailto:herindom90@gmail.com">herindom90@gmail.com</a></p>
 
-                    <p align="left" style="color: black;"><i style="color: black;" class="fa fa-phone"> </i> <strong>  Mobil & sms  </strong><a style="color: black;" href="tel:+45 +26639531">26639531</a></p>
+                    <p align="left" style="color: black;"><i style="color: black;" class="fa fa-phone"> </i> <strong>  Mobil & sms  </strong><a style="color: black;" href="tel:+45 +88888888">88888888</a></p>
                 </div>
                 <div class="col-md-4 col-sm-6">
                     <h3 style="color: black;">2025 | L&#248;vel - lige i n&#230;rheden</h3>
