--- a/dagtilbud/skole/index.html
+++ b/dagtilbud/skole/index.html
@@ -1,31 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="da">
 
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="robots" content="index, follow">
-    <meta name="Description" content="">
-    <title></title>
+    <meta name="description" content="Sødalskolen i Viborg Kommune - fællesskab, faglighed og tryghed">
+    <title>Sødalskolen</title>
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel="stylesheet">
-
-
     <link href="../../bundles/styles%3Fv=KM4bbTryPaq-ZwyxeA6u2q1AtaC1rWIbffOIQ7HUwa81.css" rel="stylesheet" />
-
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
 </head>
 
-<body style="font - family: &#39;Source Sans Pro&#39;, sans-serif;">
-
-
+<body style="font-family: 'Source Sans Pro', sans-serif;">
 
     <nav id="master-two" class="navbar navbar-default navbar-static-top cbp-af-header shadowed" role="navigation" style="background-color: #e0f7b6; color: black;">
         <div class="container">
@@ -95,108 +82,64 @@
         </div>
     </nav>
 
-
-
-
-
-
-
-
-
-
-
     <div class="container-fluid">
-
         <div class="container">
             <div class="row">
-                <div class="top-section"> </div>
-                <div>
-
-
-                    <div class="umb-grid">
-                        <div class="grid-section">
-                            <div>
-                                <div class='container'>
-                                    <div class="row clearfix">
-                                        <div class="col-md-4 column">
-                                            <div>
-
-
-                                                <img src="../../media/1057/soedalskolen.png">
-                                                <p class="caption"></p>
-
-
-
-
-
-
-                                            </div>
-                                        </div>
-                                        <div class="col-md-8 column">
-                                            <div>
-
-
-
-                                                <h1>Sødalskolen</h1>
-
-
-
-
-
-                                                <div style="text-align: justify;"><strong>Skolen</strong></div>
-                                                <div style="text-align: justify;">Sødalskolen er en folkeskole i Viborg kommune.</div>
-                                                <div style="text-align: justify;">Skolen er en fusion af to selvstændige skoler: Rødding Skole og Løvel Skole. Løvel Skole blev lukket pr. 31.07.08 og blev i stedet en afdeling af den fælles skole, som 1. august 2008 åbnede med nyt navn:<span> </span><strong>Sødalskolen.<br /></strong></div>
-                                                <div style="text-align: justify;"></div>
-                                                <div style="text-align: justify;">
-                                                    <div style="text-align: justify;">Skolen består af to fysisk adskilte afdelinger, Løvel Afdeling med 0. - 6. klasse og Rødding Afdeling med 0. - 9. klasse. Vi er med andre ord "Danmarks længste skole" - der er 5 kilometer fra den ene
-                                                        ende til den anden. Der er ialt 360 elever og 53 ansatte.</div>
-                                                    <div style="text-align: justify;"><br />Formand for skolebestyrelsen: Henrik Karlsen.</div>
-                                                    <div style="text-align: justify;">Skoleleder for hele skolen: Brian Albæk</div>
-                                                    <div style="text-align: justify;">Daglig leder på afdelingen i Løvel: Pia Østergaard</div>
-                                                    <div style="text-align: justify;">Se mere på hjemmesiden:<span> </span><a href="http://sodalskolen.skoleporten.dk/sp" target="_blank" title="Sødalskolen">Sødalskolen</a> </div>
-                                                </div>
-
-
-                                            </div>
-                                        </div>
+                <div class="top-section"></div>
+                <div class="umb-grid">
+                    <div class="grid-section">
+                        <div class='container'>
+                            <div class="row clearfix">
+                                <div class="col-md-4 column">
+                                    <img src="../../media/1057/soedalskolen.png" alt="Sødalskolen logo">
+                                </div>
+                                <div class="col-md-8 column">
+                                    <h1>Sødalskolen</h1>
+                                    <div style="text-align: justify;">
+                                        <strong>Skolen</strong>
+                                        <p>Sødalskolen er en folkeskole i Viborg Kommune med fokus på tryghed, ansvar, respekt og faglighed. Skolen består af to afdelinger:</p>
+                                        <ul>
+                                            <li><strong>Løvel Afdeling:</strong> 0. - 6. klasse</li>
+                                            <li><strong>Rødding Afdeling:</strong> 0. - 9. klasse (udskolingen foregår her)</li>
+                                        </ul>
+                                        <p>Vi kalder os "Danmarks længste skole" – der er 5 kilometer mellem afdelingerne.</p>
+                                        <p><strong>Nøgletal:</strong><br> Omkring 360 elever og 53 ansatte.</p>
+                                        <p><strong>Ledelse:</strong><br> Skoleleder: Brian Albæk<br> Daglig leder i Løvel: Pia Østergaard<br> Formand for skolebestyrelsen: Henrik Karlsen</p>
+                                        <p><strong>Kontakt:</strong><br> Mail: <a href="mailto:skole.sodalskolen@viborg.dk">skole.sodalskolen@viborg.dk</a><br> Telefon: <a href="tel:+4587872450">+45 87872450</a><br> Adresse: Meldgårdsvej 24 / Gl. Røddingvej
+                                            8, 8830 Tjele</p>
+                                        <p><a href="https://sodalskolen.aula.dk" target="_blank">Besøg Sødalskolens hjemmeside</a></p>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-
-
                 </div>
-
-
-
             </div>
         </div>
     </div>
 
     <footer style="background-color: #e0f7b6;">
-
-
-
         <div class="container">
             <div class="row">
                 <div class="col-md-4 col-sm-6">
-                    <p align="left" style="color: black;"><strong>Henvendelser vedr. hjemmesiden: </strong></p>
-                    <p align="left" style="color: black;"><i style="color: black;" class="fa fa-envelope"> </i> <strong>  Email:  </strong><a style="color: black;" href="mailto:herindom90@gmail.com">herindom90@gmail.com</a></p>
-
-                    <p align="left" style="color: black;"><i style="color: black;" class="fa fa-phone"> </i> <strong>  Mobil & sms  </strong><a style="color: black;" href="tel:+45 +88888888">88888888</a></p>
+                    <p align="left" style="color: black;"><strong>Kontakt Skolen:</strong></p>
+                    <p align="left" style="color: black;">
+                        <i style="color: black;" class="fa fa-envelope"></i>
+                        <strong>Email:</strong> <a style="color: black;" href="mailto:skole.sodalskolen@viborg.dk">skole.sodalskolen@viborg.dk</a>
+                    </p>
+                    <p align="left" style="color: black;">
+                        <i style="color: black;" class="fa fa-phone"></i>
+                        <strong>Telefon:</strong> <a style="color: black;" href="tel:+4587872450">+45 87872450</a>
+                    </p>
                 </div>
                 <div class="col-md-4 col-sm-6">
-                    <h3 style="color: black;">2025 | L&#248;vel - lige i n&#230;rheden</h3>
+                    <h3 style="color: black;">2025 | Løvel - lige i nærheden</h3>
                 </div>
             </div>
         </div>
-
     </footer>
 
-
     <script src="../../bundles/scripts%3Fv=vXJroFi3JyLUsGygznX5ldTcpaAZEgbZ8IKLw2YJiq81"></script>
-
 
 </body>
 
