Update phone and email

--- a/foreninger/luif-friluftsliv/index.html
+++ b/foreninger/luif-friluftsliv/index.html
@@ -347,9 +347,8 @@
             <div class="row">
                 <div class="col-md-4 col-sm-6">
                     <p align="left" style="color: black;"><strong>Henvendelser vedr. hjemmesiden: </strong></p>
-                    <p align="left" style="color: black;"><i style="color: black;" class="fa fa-envelope"> </i> <strong>  Email:  </strong><a style="color: black;" href="mailto:herindom90@gmail.com">herindom90@gmail.com</a></p>
+                    <p align="left" style="color: black;"><i style="color: black;" class="fa fa-envelope"> </i> <strong>  Email:  </strong><a style="color: black;" href="mailto:webadmin@lovel.dk">webadmin@lovel.dk</a></p>
 
-                    <p align="left" style="color: black;"><i style="color: black;" class="fa fa-phone"> </i> <strong>  Mobil & sms  </strong><a style="color: black;" href="tel:+45 +88888888">88888888</a></p>
                 </div>
                 <div class="col-md-4 col-sm-6">
                     <h3 style="color: black;">2025 | L&#248;vel - lige i n&#230;rheden</h3>
