--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
     <div class="container-fluid">
         <div class="row">
-            <div class="fill-screen" style="background-image: url(https://lovel.dk/media/1009/forside.jpg?crop=0.1467915013227509,0.0000000000000028421709430404,0.10469659391534644,0&amp;cropmode=percentage&amp;width=1920&amp;height=1280&amp;rnd=132615809810000000&quality=80)">
+            <div class="fill-screen" style="background-image: url('media/1009/forside.jpg');">
                 <div class="overlay-text col-md-6 col-sm-12">
                     <div>
                         <h1 style="color: black">
