opdateret support email

--- a/loevel-netop-nu/index.html
+++ b/loevel-netop-nu/index.html
@@ -251,7 +251,7 @@
             <div class="row">
                 <div class="col-md-4 col-sm-6">
                     <p align="left" style="color: black;"><strong>Henvendelser vedr. hjemmesiden: </strong></p>
-                    <p align="left" style="color: black;"><i style="color: black;" class="fa fa-envelope"> </i> <strong>  Email:  </strong><a style="color: black;" href="mailto:webadmin@lovel.dk">webadmin@lovel.dk</a></p>
+                    <p align="left" style="color: black;"><i style="color: black;" class="fa fa-envelope"> </i> <strong>  Email:  </strong><a style="color: black;" href="mailto:support@lovel.dk">support@lovel.dk</a></p>
 
                 </div>
                 <div class="col-md-4 col-sm-6">
