--- a/foreninger/loevelfonden-2000/index.html
+++ b/foreninger/loevelfonden-2000/index.html
@@ -189,8 +189,7 @@
                                                             <li>Ønsker du at tegne medlemsskab/støttebidrag udfyldes særskilt medlemsblanket, som du kan rekvirere hos kasseren</li>
                                                         </ul>
                                                         <p> </p>
-                                                        <p><a data-id="1258" href="../loevelfonden-2000-formaal/index.html" target="_blank" title="LøvelFonden 2000 formål">Formålet med Løvelfonden 2000</a></p>
-                                                        <p> </p>
+                                                        <p><a href="Vedtægter Løvelfonden2000.pdf" target="_blank" title="Vedtægter for Løvelfonden 2000">Vedtægter for Løvelfonden 2000</a></p>                                                        <p> </p>
                                                         <p><strong>Kontakt:</strong></p>
                                                         <p>Formand: Klaus Høgh, 20454202</p>
                                                     </div>
@@ -238,5 +237,6 @@
 
 
 </body>
+
 
 </html>
